# JADE

./: .gitlab-ci.yml  Dockerfile  Dockerfile_fedora39x86_64i686_gnu  Dockerfile_fedora41x86_64i686_gnu  JADE.spec  README.md  jadeinstall.sh  jadeinstall_externals_i686.sh  jadeinstall_i686.sh  jadetest.sh  macrun.sh  maketarball.sh  run.sh
HepMC3/examples/ConvertExampleJADE/: CMakeLists.txt  convert_example.cc
convert/: CMakeLists.txt  README.md  cmdline.c  cmdline.ggo  cmdline.h  convert_example.cc  convert_mc.cc
convert/include/: WriterJADE.h
convert/src/: MathUtils.h  PIDCodes.h  PIDUtils.h  WriterJADE.cc  jadeio.f
fptobos/: CMakeLists.txt  README.md
fptobos/src/: bytswp.f  chartest.f  chasci.f  chebcd.f  cnvatoi.f  cnvibm3e.f  fptobos.f  mvcl.f  pribank.f  prigvtx.f  prihead.f  prilgcl.f  primur1.f  primur2.f  pripatr.f  pritagg.f  pritpev.f  pritptr.f  pritpvx.f  prize4v.f  prizehd.f  prizvtx.f  test.f  twoin1.f  unpaff.f  unpjad.f  unpjad1.f
jadesoft/: CMakeLists.txt  GNUmake-objects  GNUmake-objects.av  GNUmake-rules  GNUmake-rules.av  GNUmake-rules.av.ppc  GNUmakefile  GNUmakefile.av  Incdep.ksh  Init_jade_env.csh  Init_jade_env.ksh  Init_jade_env.sh  README.md
jadesoft/GNUmake-log/: GNUmake.log-2000  GNUmake.log-2003  GNUmake.log-2003b
jadesoft/cal/Info/: DEDX.calib  IDJS.calib  JTAB.calib  JTPL.calib  LGMA.calib  LGST.calib  MUCA.calib  RVTX.calib  SPTG.calib  TAGF.calib  TAGS.calib  TOFC.calib  VTXB.calib  VTXC.calib  VTXF.calib  VTXR.calib  ZCAL.calib  kalib.form  kalib.mail
jadesoft/cmake/Modules/: FindCERNLIB.cmake
jadesoft/info/: README  jaderuns.dat.ori  lumi.dat.ori  taklumi.f
jadesoft/job/jadesim/: ZE.CARD
jadesoft/job/jadez/: F11OLS.GRAPHICS.PROFILE.MACROS  ze
jadesoft/job/mcjade/: demo.py57isr_35.aix.cprod  demo.py57isr_35.linux.cprod
jadesoft/job/superv/: sv.ksh  sv.sh
jadesoft/job2016/jadesim/: GEN.CARD  GEN_JT63.CARD  MC.CARD  README.md  SV.CARD  jadesim
jadesoft/job2016/jadez/: F11LHO.AUPDAT1  mc  sv
jadesoft/job2016/mcjade/: mc.ksh  mc.sh
jadesoft/job2016/superv/: sv.sh
jadesoft/job2016/ze4v/: ze.ksh
jadesoft/main/jadez/: F22BOW.HELP.DATASET  MAIN.map  gphmain.F
jadesoft/main/mcjade/: MAIN.map  mcmain.f  mcuser.f
jadesoft/main/superv/: MAIN.map  ana.F  cana.for  jdmain.f  showb.f  user.f
jadesoft/main/ze4v/: MAIN.map  ze4vjb.f
jadesoft/main2016/jadez/: CMakeLists.txt  gphmain.F  gphmain.cxx  xuser.F
jadesoft/main2016/mcjade/: CMakeLists.txt  mcjade.f  mcmain.f  mcmain_nohbook.f  mcrand.f  mcuser.f
jadesoft/main2016/superv/: CMakeLists.txt  user.f
jadesoft/main2016/ze4v/: CMakeLists.txt
jadesoft/main_patched/: patched.f
jadesoft/main_patched/jadez/: gphmain.F  gphmain2.F  xuser.F
jadesoft/main_patched/mcjade/: mcmain.f  mcuser_nohbook.f
jadesoft/main_patched/superv/: user.f
jadesoft/scripts2016/: Init_jade_env.sh  gencmake.sh  install.sh  patch.sh  process.sh
jadesoft/src/boslib/: GNUmakefile  acs.for  aplu.f  arbank.f  asrd.f  bchm.F  bcre.F  bdlg.F  bdlm.F  bdlmx.F  bdls.F  bdmp.F  bfmt.for  bftdir.f  bfun.f  bgac.for  bgary.F  binty.F  blna.F  bloada.F  bloc.F  blocda.F  bmltx.F  bmlty.F  bookch.f  bookee.f  boutp.F  bpasda.F  bplu.f  brds.F  breadc.for  breadca.F  breadcc.f  breadk.f  brnm.F  bruth.F  bsei.F  bsls.F  bsta.F  bwrs.F  (+62 more)
jadesoft/src/grafix/: GNUmakefile  bankls.F  bankpr.F  barsec.f  blnumb.F  calloc.F  capmrk.F  cdst.F  cirdis.F  credit.F  cricro.f  decide.f  dedxds.F  dedxv1.F  dedxvw0.F  defcmd0.F  defmac.f  defwrd.f  delmac.f  diaghn.f  diagin.f  disaxi.f  disply.F  dnum.f  dracap.f  drawbp.F  drawer.F  drawfd.F  drawmu.f  drawpi.f  drthcv.f  dsfadc.F  dthcv1.f  ecap.F  edvp.F  efmass.F  endmes.F  evdisp.F  expmac.f  fadcax.F  (+79 more)
jadesoft/src/interface/: GNUmakefile  biby.f  cplot10.for  cpltcol.for  dlib.f  hfix.f  igwlcm.F  ips.f  plot10.F  plot2016.f  ranmar.f  setcol.F
jadesoft/src/jadegs/: CAPITALS_VERTEX.f  GNUmakefile  adjcir.F  alphan.F  change.F  corlar.f  dechif.f  dedsel.F  dedxbk.F  dedxbn00.F  dedxbn1.F  dedxcn0.F  drpipe.F  drtrck.F  dserr.f  dummy0.f  dxmcsp.f  eigen.f  evbkpr0.F  exjhtl.F  fitevr.F  frfitv.F  getint.f  gnurec.F  gphmainx.F  jadebd.F  jegain.f  jfetch.F  jftnew.F  jftnew0.F  jrecal.F  kalibr.f  kalpre.F  klread.F  komaks.F  ktmcon.F  linkds.f  loc.f  locfld.f  mctr4v.F  (+50 more)
jadesoft/src/jademus/: cmued.for  cmuedwrk.for  cmuffl.f  cmufwork.for  mucon.F  muconr.f  muconw.F  muffle.F  mufflm.f  muffls.F  mufflt.F  muffly.F  mufhit.f  mufsta.F  muini.F  muinig.F  muldsp.F_sleep  mupr11.F  muregs.f  mures2.F  mutima.f  muwire.F  omucone.F  omuffle.F  omufflt.F  omuffly.F  xymud.F
jadesoft/src/jadesr/: breadkw.f  cutsr1.for  distri.f  evconv1.F  evfoldkw.F  evt.f  evt2.f  (+17 more)
jadesoft/src2016/: gencmake.sh  process.sh
jadesoft/util/: Install.ksh
jtuple/: CMakeLists.txt  README.md
jtuple/src/: bos.inc  casso.f  caxes.f  cdble.f  cinfo.f  ckern.f  cksord.f  clclmi.f  cnass.f  cncnt.f  cnjet.f  cnone.f  cwrit.f  cyget.f  cyjet.f  endian.f  jadepr.F  jadev.F  jtbknt.F  jtevnt.F  jtevsl.F  jtffr.inc  jtfnsh.F  jtinit.F  jtjob.F  jtjtpl.inc  jtsetr.F  jtstat.inc  jtup.inc  jzevnt.F  jzffr.inc  jzfnsh.F  jzinit.F  jzread.F  jzsetr.F  ntdup.f  prthr.f  ptot.f  px116.f  qqangl.f  (+8 more)
picocernlib/: CMakeLists.txt  README.md
picocernlib/include/: Frame.h  Frame_Dict.h  Frame_LinkDef.h
picocernlib/src/: Frame.cxx  Frame_Dict.cxx  JBOOK.cxx  JHIGZ.cxx  JHIGZ2.cxx  JINTERFACE.F  gamma.F
test/: CMakeLists.txt  README.md  mcjade1.card  pythia8_JADE.cc  superv1.card  testPythia1.input  wrapper.sh  wrapper.sh.in
test/cards/: fptobos1.card  jtjob1.card  jtjob2.card  jtjobfile006.card  jzread1.card  jzread2.card  jzreadfile006.card  mcjade2.card  py57.card  superv2.card  supervfile006.card  testPythia1.input  unpjad1.card  ze4v1.card  ze4v2.card  ze4vfile006.card
test/fjcore/: README
test/old/: F11LHO.AUPDAT1  F11OLS.GRAPHICS.PROFILE.MACROS  demo.sh  genmc64.sh  jtjobcard.txt  mcjadecard.txt  mcjadecard_old.txt  supervcard.txt  ze4vcard.txt
test/src/: ROOT_analysis.cc  ROOT_analysis_1.cc  ROOT_analysis_2.cc  jadeanalysis.h  jadehelpers.h  pythia8_JADE.cc
(+3356 files in other folders)
